node-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    app: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app 
    spec:
      containers:
      - name: node-app
        image: imsdev.azurecr.io/tsa/bpe:$RELEASE_ARTIFACTS__DEVELOPERSERASIAUTORAYA-ADMIN.BPE_BUILDID
        ports:
        - containerPort: 3000
