ingress-myservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: bagus.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app-service
                port:
                  number: 3000
